--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   brasil_fields: 1.0.0
   intl: ^0.17.0
+  validadores: ^1.0.2
+  cpf_cnpj_validator: ^1.0.5
 
 dev_dependencies:
   flutter_test:
